--- a/aura/walker.css
+++ b/aura/walker.css
@@ -1,11 +1,6 @@
 @define-color selected-text #a277ff;
-@define-color text #edecee;
+@define-color text #54c59f;
 @define-color base #15141b;
 @define-color border #a277ff;
-@define-color foreground #edecee;
+@define-color foreground #54c59f;
 @define-color background #15141b;
-
-child:selected {
-    background-color: alpha(@border, 0.12);
-    border-radius: 6px;
-}
