--- a/aura/walker.css
+++ b/aura/walker.css
@@ -1,6 +1,6 @@
-@define-color selected-text #a277ff;
-@define-color text #54c59f;
+@define-color selected-text #54c59f;
+@define-color text #a277ff;
 @define-color base #15141b;
 @define-color border #a277ff;
-@define-color foreground #54c59f;
+@define-color foreground #a277ff;
 @define-color background #15141b;
