Make Walker input pink

--- a/aura/walker.css
+++ b/aura/walker.css
@@ -11,9 +11,9 @@ child:selected .item-box {
 }
 
 .input {
-    color: #54c59f;
+    color: #c17ac8;
 }
 
 .input placeholder {
-    color: #54c59f;
+    color: #c17ac8;
 }
