--- a/extras/waybar/style.css
+++ b/extras/waybar/style.css
@@ -14,7 +14,7 @@ window#waybar {
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: 'CaskaydiaMono Nerd Font Mono';
+  font-family: 'CaskaydiaMono Nerd Font Propo';
   font-size: 12px;
 }
 
